--- a/api/composer.json
+++ b/api/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "predis/predis": "^2.2"
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "predis/predis": "^2.2",
+        "spatie/laravel-backup": "^9.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
