--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,11 @@
 name: Tests
 
 on:
-  push:
-    branches: [ "main" ]
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-latest
 
     services:
@@ -22,7 +22,7 @@ jobs:
       - uses: shivammathur/setup-php@c541c155eee45413f5b09a52248675b1a2575231
         with:
           php-version: '8.3'
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Copy .env
         run: |
           cd api
@@ -35,6 +35,10 @@ jobs:
         run: |
           cd api
           php artisan key:generate
+      - name: Migration
+        run: |
+          cd api
+          php artisan migrate
       - name: Directory Permissions
         run: |
           cd api
@@ -43,13 +47,3 @@ jobs:
         run: |
           cd api
           php artisan test
-      - name: Copy SSH key
-        run: |
-          echo "${{ secrets.SSH_KEY }}" >> ./id_rsa
-          chmod 600 id_rsa
-      - name: Run deploy script
-        run: |
-          scp -C -o StrictHostKeyChecking=no -i ./id_rsa ./deployment/bin/deploy.sh ${{ secrets.SSH_CONNECTION_TESTING }}:/home/martin/deploy.sh
-          scp -C -o StrictHostKeyChecking=no -i ./id_rsa ./id_rsa ${{ secrets.SSH_CONNECTION_TESTING }}:/home/martin/.ssh/id_rsa
-          ssh -tt -o StrictHostKeyChecking=no -i ./id_rsa ${{ secrets.SSH_CONNECTION_TESTING }} "chown martin:martin /home/martin/deploy.sh && chmod +x /home/martin/deploy.sh"
-          ssh -tt -o StrictHostKeyChecking=no -i ./id_rsa ${{ secrets.SSH_CONNECTION_TESTING }} "/home/martin/deploy.sh ${{ secrets.MYSQL_PASSWORD }}"
