--- a/.github/workflows/test.docker.yml
+++ b/.github/workflows/test.docker.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Run tests
         run: |
           docker-compose -f docker-compose.ci.yml up -d
+          docker-compose -f docker-compose.ci.yml run --rm migrate
           docker-compose -f docker-compose.ci.yml exec -T api php artisan test
 
   remove-images:
