--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -19,8 +19,10 @@ services:
       - QUEUE_CONNECTION=sync
       - MAIL_MAILER=log
     depends_on:
-      - mysql
-      - migrate
+      mysql:
+        condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
 
   migrate:
     image: ${API_IMAGE}
@@ -36,6 +38,9 @@ services:
       - DB_DATABASE=blog-test
       - DB_USERNAME=root
       - DB_PASSWORD=root
+    depends_on:
+      mysql:
+        condition: service_healthy
 
   mysql:
       image: mysql:8.0.21
