--- a/.github/workflows/test.docker.yml
+++ b/.github/workflows/test.docker.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Run tests
         run: |
           docker-compose -f docker-compose.ci.yml up -d
-          docker-compose -f docker-compose.ci.yml exec -T api php artisan test
+          docker-compose -f docker-compose.ci.yml exec -T api sh -c "php artisan migrate:status && php artisan test"
 
   remove-images:
     needs: [ test ]
