--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -38,6 +38,7 @@ services:
       - DB_DATABASE=blog-test
       - DB_USERNAME=root
       - DB_PASSWORD=root
+    command: sh -c "php artisan migrate --force"
     depends_on:
       mysql:
         condition: service_healthy
