--- a/.github/workflows/deploy.docker.yml
+++ b/.github/workflows/deploy.docker.yml
@@ -1,25 +1,14 @@
 name: Deploy
 
 on:
-  push:
-    branches: [ "main" ]
-
-env:
-  NGINX_IMAGE: johnliutw/blog-nginx:${{ github.sha }}
+  workflow_dispatch:
+    inputs:
+      IMAGE_TAG:
+        description: 'Docker Image Tag'
+        required: true
+        default: 'latest'
 
 jobs:
-  build-nginx:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build nginx image
-        run: |
-          docker build -t $NGINX_IMAGE -f ./Dockerfile.nginx .
-          docker push $NGINX_IMAGE
   deploy:
     runs-on: ubuntu-latest
     steps:
@@ -36,7 +25,7 @@ jobs:
           scp -C -o StrictHostKeyChecking=no -i ./id_rsa ./api/.env.docker.prod.template ${{ secrets.SERVER_IP }}:/usr/src/.env
           ssh -tt -o StrictHostKeyChecking=no -i ./id_rsa john@${{ secrets.SERVER_IP }} "chown john:john /home/john/deploy.sh && chmod +x /home/john/deploy.sh"
           ssh -tt -o StrictHostKeyChecking=no -i ./id_rsa ${{ secrets.SERVER_IP }} "
-            sed -i "/IMAGE_TAG/c\IMAGE_TAG=${{ github.sha }}" /usr/src/.env
+            sed -i "/IMAGE_TAG/c\IMAGE_TAG=${{ github.event.inputs.IMAGE_TAG }}" /usr/src/.env
             sed -i "/DB_PASSWORD/c\DB_PASSWORD=${{ secrets.DB_PASSWORD }}" /usr/src/.env
             sed -i "/APP_KEY/c\APP_KEY=${{ secrets.APP_KEY }}" /usr/src/.env"
           ssh -tt -o StrictHostKeyChecking=no -i ./id_rsa john@${{ secrets.SERVER_IP }} "/home/john/deploy.sh"
