--- a/api/.env.docker.prod.template
+++ b/api/.env.docker.prod.template
@@ -12,8 +12,8 @@ LOG_LEVEL=error
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=posts
-DB_USERNAME=root
+DB_DATABASE=laravel_devops
+DB_USERNAME=admin
 DB_PASSWORD=${DB_PASSWORD}
 
 QUEUE_CONNECTION=redis
