--- a/api/.env.docker.prod.template
+++ b/api/.env.docker.prod.template
@@ -10,7 +10,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=error
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=${DB_HOST}
 DB_PORT=3306
 DB_DATABASE=laravel_devops
 DB_USERNAME=admin
@@ -22,8 +22,8 @@ REDIS_PORT=6379
 
 MAIL_MAILER=log
 
-AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=devops-with-laravel-backups
 AWS_USE_PATH_STYLE_ENDPOINT=false
