--- a/.github/workflows/test.docker.yml
+++ b/.github/workflows/test.docker.yml
@@ -1,8 +1,7 @@
 name: Tests
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+  workflow_dispatch:
 
 env:
   API_IMAGE: johnliutw/blog-api:${{ github.sha }}
