--- a/deployment/infra/api/deployment.yml
+++ b/deployment/infra/api/deployment.yml
@@ -16,6 +16,10 @@ spec:
         - name: api
           image: johnliutw/blog-api:b9c4a5ec6ca9d95fb5b8d3a40bac3277c2a6baf1
           imagePullPolicy: Always
+          resources:
+            requests:
+              cpu: "200m"
+              memory: "64Mi"
           ports:
             - containerPort: 9000
           envFrom:
