--- a/deployment/infra/worker/deployment.yml
+++ b/deployment/infra/worker/deployment.yml
@@ -3,6 +3,11 @@ kind: Deployment
 metadata:
   name: worker
 spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 20%
+      maxUnavailable: 30%
   replicas: 2
   selector:
     matchLabels:
@@ -20,6 +25,24 @@ spec:
             requests:
               cpu: "100m"
               memory: "64Mi"
+          livenessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - php /usr/src/artisan queue:monitor default
+            initialDelaySeconds: 20
+            periodSeconds: 30
+            failureThreshold: 2
+          readinessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - php /usr/src/artisan queue:monitor default
+            initialDelaySeconds: 10
+            periodSeconds: 30
+            failureThreshold: 1
           envFrom:
             - configMapRef:
                 name: blog
