--- a/deployment/infra/common/app-secret.yml
+++ b/deployment/infra/common/app-secret.yml
@@ -4,9 +4,6 @@ metadata:
   name: blog
 type: Opaque
 stringData:
-  # APP_KEY: "$APP_KEY"
-  # DB_HOST: "$DATABASE_HOST"
-  # DB_PASSWORD: "$DATABASE_PASSWORD"
-  APP_KEY: "base64:8xHTTpiO+qc96kY7Jrue5Yv9AkzGTM0CfnEoRZe4vEU="
-  DB_HOST: "blog.c5esy0i0kl3u.ap-northeast-1.rds.amazonaws.com"
-  DB_PASSWORD: "bNkGpN8PzTuIg7T9fQJZ"
+  APP_KEY: "$APP_KEY"
+  DB_HOST: "$DB_HOST"
+  DB_PASSWORD: "$DB_PASSWORD"
