--- a/deployment/infra/migrate/job.yml
+++ b/deployment/infra/migrate/job.yml
@@ -8,7 +8,7 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: migrate
-          image: johnliutw/blog-api:b9c4a5ec6ca9d95fb5b8d3a40bac3277c2a6baf1
+          image: johnliutw/blog-api:$IMAGE_TAG
           command: ["sh", "-c", "php artisan migrate --force"]
           envFrom:
             - configMapRef:
