--- a/.github/workflows/deploy.k8s.yml
+++ b/.github/workflows/deploy.k8s.yml
@@ -38,12 +38,14 @@ jobs:
             cp api/.env.docker.prod.template .env
   
             sed -i "/IMAGE_TAG/c\IMAGE_TAG=${{ github.event.inputs.IMAGE_TAG }}" .env
-  
             sed -i "/DB_HOST/c\DB_HOST=${{ secrets.DB_HOST }}" .env
-  
             sed -i "/APP_KEY/c\APP_KEY=${{ secrets.APP_KEY }}" .env
   
             export $(cat .env)
+
+            echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
+            echo "DB_HOST=${DB_HOST}" >> $GITHUB_ENV
+            echo "APP_KEY=${APP_KEY}" >> $GITHUB_ENV
   
             envsubst < deployment/infra/common/app-secret.yml > tmp_secret
             mv tmp_secret deployment/infra/common/app-secret.yml
@@ -52,7 +54,7 @@ jobs:
             mv tmp_config deployment/infra/common/app-config.yml
 
             echo $IMAGE_TAG
-            cat app-secret.yml
+            cat deployment/infra/common/app-secret.yml
       - name: Prepare deployment files
         run: |
             echo $IMAGE_TAG
